feat:add basic info

--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -1,12 +1,15 @@
 // 主視覺 color--------------------------
-$primary: #007C7D; //小綠、card-border、btn-hover
-$secondary: #52A885; //btn
+$primary: #007C7D; //小綠、border、btn
+$secondary: #52A885; //hover
 $neutral-light: #F8F7EE; //nav
-$neutral-dark: #353239; //footer、後台 nav、 form 表頭
+$neutral-dark: #484848; //footer、後台 nav、 form 表頭
 
 // 吉祥物 color-------------------
 $mascot-skin: #F6E6D0;
 $mascot-green: #007C7D;
+$mascot-yellow: #986B9B; //小紫
+$mascot-blue: #5D92CD; //小天
+$mascot-black: #484848; //黑黑
 
 // 灰階 color--------------------------
 $white: #ffffff;
