--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,12 +1,12 @@
 @import "../base/color";
 @import "../base/font";
 
-// 範例 html
+// html
 // <a href="./shop_list.html"><button class="btn"><span>立即訂購</span><img src="./images/icon_cart.svg" alt="購物車圖示"></button></a>
 
 .btn {
   display: flex;
-  background-color: $secondary;
+  background-color: $primary;
   border-radius: 32px;
   border: none;
   min-width: max-content;
@@ -19,18 +19,18 @@
   }
 
   &:hover {
-    background-color: $primary;
+    background-color: $secondary;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.33);
   }
 
   &:hover span {
-    color: $black;
+    color: $white;
   }
 
   img {
     vertical-align: text-bottom;
-    height: 16px;
-    width: 16px;
+    height: 14px;
+    width: 14px;
     margin: 0px 4px;
   }
 }
