--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -103,3 +103,30 @@
     border: 2px solid $secondary;
   }
 }
+
+/* ========== checkbox ========== */
+.main {
+  label {
+    cursor: pointer;
+  }
+
+  input[type="checkbox"] {
+    display: none;
+  }
+
+  input[type="checkbox"]+label::before {
+    content: "";
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    background-image: url('data:image/svg+xml,<svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.33333 17.6667C11.6345 17.6667 13.7178 16.7339 15.2259 15.2259C16.7339 13.7178 17.6667 11.6345 17.6667 9.33333C17.6667 7.03217 16.7339 4.94883 15.2259 3.44077C13.7178 1.93274 11.6345 1 9.33333 1C7.03217 1 4.94883 1.93274 3.44077 3.44077C1.93274 4.94883 1 7.03217 1 9.33333C1 11.6345 1.93274 13.7178 3.44077 15.2259C4.94883 16.7339 7.03217 17.6667 9.33333 17.6667Z" stroke="black" stroke-width="1.66667" stroke-linejoin="round"/></svg>');
+    background-size: contain;
+    margin-right: 5px;
+    position: relative;
+    top: 1px;
+  }
+
+  input[type="checkbox"]:checked+label::before {
+    background-image: url('data:image/svg+xml,<svg width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.33333 17.6667C11.6345 17.6667 13.7178 16.7339 15.2259 15.2259C16.7339 13.7178 17.6667 11.6345 17.6667 9.33333C17.6667 7.03217 16.7339 4.94883 15.2259 3.44077C13.7178 1.93274 11.6345 1 9.33333 1C7.03217 1 4.94883 1.93274 3.44077 3.44077C1.93274 4.94883 1 7.03217 1 9.33333C1 11.6345 1.93274 13.7178 3.44077 15.2259C4.94883 16.7339 7.03217 17.6667 9.33333 17.6667Z" fill="%23007C7D" stroke="%23007C7D" stroke-width="1.66667" stroke-linejoin="round"/><path d="M6 9.5L8.5 12L13.5 7" fill="%23007C7D"/><path d="M6 9.5L8.5 12L13.5 7" stroke="white" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+  }
+}
