feat: add personal Info

--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -26,6 +26,7 @@
     justify-content: center;
     flex-direction: column;
     border-radius: 20px;
+    margin-bottom: 20px;
 
 
     .general_info_table {
@@ -105,6 +106,44 @@
     }
 
   }
+
+  .table-container {
+    overflow-x: scroll;
+    max-width: 100%;
+    display: none;
+    margin-top: 20px;
+    min-height: 450px;
+
+    .detail_table {
+      width: 100%;
+      border-collapse: collapse;
+      font-size: 12px;
+      table-layout: auto;
+
+      th,
+      td {
+        padding: 8px;
+        border: 1px solid $gray-500;
+        text-align: left;
+      }
+
+      thead {
+        background-color: $gray-300;
+        color: $black;
+      }
+
+      tbody {
+        background-color: white;
+      }
+    }
+
+    @media screen and (min-width: 576px) {
+      .detail_table {
+        font-size: 14px;
+
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 576px) {
@@ -127,13 +166,6 @@
     right: 14vw;
     top: 180px;
   }
-
-  // .topic_container {
-  //   .row {
-  //     display: flex;
-  //     flex-wrap: wrap;
-  //   }
-  // }
 
 }
 
