--- a/css/style.css
+++ b/css/style.css
@@ -4557,6 +4557,7 @@ a {
   justify-content: center;
   flex-direction: column;
   border-radius: 20px;
+  margin-bottom: 20px;
 }
 .main .general_info_div .general_info_table {
   font-size: 12px;
@@ -4616,6 +4617,37 @@ a {
 }
 .main .topic_container .card-4 {
   background-image: url('data:image/svg+xml,<svg width="91" height="133" viewBox="0 0 91 133" fill="none" xmlns="http://www.w3.org/2000/svg"><mask id="mask0_78_105" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="91" height="133"><rect width="91" height="133" fill="%23D9D9D9"/></mask><g mask="url(%23mask0_78_105)"><path d="M39.6331 87.6822V65.5892L35.3695 60.8088L34.5633 59.6196C32.39 56.414 27.7404 56.2112 25.2963 59.2155V59.2155C24.4578 60.2461 24 61.5342 24 62.8628V65.548C24 67.7792 24.5598 69.9747 25.6282 71.9335L26.3628 73.2801C28.8951 77.9226 32.352 81.997 36.5202 85.2516L39.6331 87.6822Z" fill="%23DB7477"/><path d="M109.92 50.5982C112 70 109.92 143.5 73.9598 110.368C38 143.5 35 70 38 50.5982C38 32.0424 54.0998 17 73.9598 17C93.8198 17 109.92 32.0424 109.92 50.5982Z" fill="%23DB7477"/><path d="M101.132 52.2713C101.132 65.6146 88.6953 68.1628 73.354 68.1628C58.0128 68.1628 45.5763 65.6146 45.5763 52.2713C45.5763 38.928 58.0128 28.1111 73.354 28.1111C88.6953 28.1111 101.132 38.928 101.132 52.2713Z" fill="%23F6E6D0"/><circle cx="63.5" cy="45.5" r="2.5" fill="%23343137"/><circle cx="83.5" cy="45.5" r="2.5" fill="%23343137"/><path d="M70 54C69.631 53.631 69.8923 53 70.4142 53H77.5858C78.1077 53 78.369 53.631 78 54V54V54C75.7098 56.0039 72.2902 56.0039 70 54V54V54Z" fill="%23343137"/></g></svg>');
+}
+.main .table-container {
+  overflow-x: scroll;
+  max-width: 100%;
+  display: none;
+  margin-top: 20px;
+  min-height: 450px;
+}
+.main .table-container .detail_table {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 12px;
+  table-layout: auto;
+}
+.main .table-container .detail_table th,
+.main .table-container .detail_table td {
+  padding: 8px;
+  border: 1px solid #D8D8D8;
+  text-align: left;
+}
+.main .table-container .detail_table thead {
+  background-color: #F2F2F2;
+  color: #000000;
+}
+.main .table-container .detail_table tbody {
+  background-color: white;
+}
+@media screen and (min-width: 576px) {
+  .main .table-container .detail_table {
+    font-size: 14px;
+  }
 }
 
 @media screen and (max-width: 576px) {
