--- a/sass/layout/_index.scss
+++ b/sass/layout/_index.scss
@@ -119,6 +119,7 @@
       border-collapse: collapse;
       font-size: 12px;
       table-layout: auto;
+      white-space: nowrap;
 
       th,
       td {
