feat: index cardborder change on click

--- a/css/style.css
+++ b/css/style.css
@@ -4739,6 +4739,7 @@ a {
   border-collapse: collapse;
   font-size: 12px;
   table-layout: auto;
+  white-space: nowrap;
 }
 .main .certificate_table_div .certificate_table img {
   cursor: pointer;
