--- a/sass/layout/_certificate.scss
+++ b/sass/layout/_certificate.scss
@@ -25,6 +25,7 @@
       border-collapse: collapse;
       font-size: 12px;
       table-layout: auto;
+      white-space: nowrap;
 
       img {
         cursor: pointer;
